--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,13 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-query": "^3.16.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
