--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
       "not dead",
       "not op_mini all"
     ],
+    "proxy": "http://localhost:5000/",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
